<resources>
    <string name="app_name">Daily Quotes</string>
    <string name="action_settings">Settings</string>
    <string name="action_rate">Developer Contact</string>
    <string name="action_share">Share</string>
    <string name="action_download">Download</string>
    <string name="action_copy">Copy to Clipboard</string>
    <string name="action_about">About</string>
    <string name="content_text">Text goes here</string>
    <string name="content_share">This is share icon</string>
    <string name="content_download">This is download icon</string>
    <string name="content_copy">This is copy icon</string>
    <string name="share_app">Share app</string>
    <string name="first_fragment_label">Thought of the Day</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="team_dsc_rec_bijnor">DSC REC BIJNOR</string>
    <string name="splash_image">splash image</string>
    <string name="Name_mail">Pranjal Singh\nMember of DSC REC Bijnor\n\nContact me on\-</string>
   <string name="about">If you wake up in the morning and lie in bed, you have a goal to achieve. There is something stopping you from giving your best. Taking out the best version from you, You just need a little motivation for this Here we are. In this app, you get a new idea, a new thought every day, which will help you jump-start your day. The idea behind this app is to provide single but perfect thought every day by which you will stay inspired, focused, and calm. Always remember\n\n\"KNOWING IS NOT ENOUGH\nYOU MUST APPLY\nWILLING IS NOT ENOUGH\nYOU MUST DO\"\n\-Bruce Lee</string>
    <string name="github">GitHub</string>
    <string name="whatsapp">Linkedin</string>
    <string name="hackerrank">Hackerrank</string>
    <string name="email">Email</string>
    <string-array name="june">

        <item>Happiness is having a large, loving, caring, close\-knit family in another city.</item>

        <item>Twenty years from now you will be more disappointed by the things that you didn\'t do than by the ones you did do. So, throw off the bowlines, sail away from safe harbor, catch the trade winds in your sails. Explore, Dream, Discover.</item>

        <item>Try not to become a man of success. Rather become a man of value.</item>

        <item>What can you do to promote world peace? Go home and love your family.</item>

        <item>A successful man is one who can lay a firm foundation with the bricks others have thrown at him.</item>

        <item>People are in our life for a reason, season or lifetime. The pain comes when we put them in the wrong category.</item>

        <item>Life is trying things to see if they work.</item>

        <item>The way to get started is to quit talking and begin doing.</item>

        <item>Families are like fudge \— mostly sweet, with a few nuts.</item>

        <item>First, have a definite, clear practical ideal, a goal, an objective. Second, have the necessary means to achieve your ends; wisdom, money, materials, and methods. Third, adjust all your means to that end.</item>

        <item>Dream big and dare to fail.</item>

        <item>Every day is a good day. There is something to learn, care and celebrate.</item>

        <item>Which is the true nightmare, the horrific dream that you have in your sleep or the dissatisfied reality that awaits you when you awake\?</item>

        <item>Respect people\'s time if you want your time to be respected.</item>

        <item>I have learned over the years that when one\'s mind is made up, this diminishes fear.</item>

        <item>Family love is messy, clinging and of an annoying and repetitive pattern, like bad wallpaper.</item>

        <item>Change the game, don\’t let the game change you.</item>

        <item>There is no substitute for hard work.</item>

        <item>I\'ve learned that people will forget what you said, people will forget what you did, but people will never forget how you made them feel.</item>

        <item>The only place where success comes before work is in the dictionary.</item>

        <item>A best friend is someone who has the power to make you laugh  hysterically even when you think you will never smile again.</item>

        <item>If you genuinely want something, don\'t wait for it \— teach yourself to be impatient.</item>

        <item>Never dream for success, work for it.</item>

        <item>Success seems to be connected with action. Successful people keep moving. They make mistakes but they don\'t quit.</item>

        <item>No one notices your sadness until it turns into anger, and then you\'re the bad person.</item>

        <item>The secret of success is to do the common thing uncommonly well.</item>

        <item>Don\'t judge each day by the harvest you reap but by the seeds that you plant.</item>

        <item>If you set your goals ridiculously high and it\'s a failure, you will fail above everyone else\'s success.</item>

        <item>Your time is limited, so don\'t waste it living someone else\'s life. Don\'t be trapped by dogma \– which is living with the results of other people\'s thinking.</item>

        <item>The greatest glory in living lies not in never falling, but in rising every time we fall.</item>

    </string-array>
    <string-array name="july">

        <item>It\’s not whether you get knocked down, it\’s whether you get back up.</item>

        <item>Leadership is the ability to get extraordinary achievement from ordinary people.</item>

        <item>Leaders are anticipatory thinkers. They consider all consequences of their behaviors before they act.</item>

        <item>You get the best version of me when I feel safe around you.</item>

        <item>Leaders think and talk about the solutions. Followers think and talk about the problems.</item>

        <item>The only way to do great work is to love what you do. If you haven\’t found it yet, keep looking. Don\’t settle.</item>

        <item>I think goals should never be easy, they should force you to work, even if they are uncomfortable at the time.</item>

        <item>Entrepreneurs are great at dealing with uncertainty and also very good at minimizing risk. That\’s the classic entrepreneur.</item>

        <item>You learn more from failure than from success. Don\’t let it stop you. Failure builds character.</item>

        <item>Happiness is not by chance, but by choice.</item>

        <item>Move out of your comfort zone. You can only grow if you are willing to feel awkward and uncomfortable when you try something new.</item>

        <item>Knowledge when to leave is important,\n\nThe job, The party, The relation.</item>

        <item>So often people are working hard at the wrong thing. Working on the right thing is probably more important than working hard.</item>

        <item>Have a dream, chase it down, jump over every single hurdle, and run through fire and ice to get there.</item>

        <item>Spend time thinking about what matters to you and what you find to be meaningful. Invest in those things. It\’s wonderful when you can live your life in accordance with your own values rather than what other people tell you should want. Leave everything else behind because it really doesn\’t matter if it doesn\’t bring you joy.</item>

        <item>In order to succeed, you can\’t be afraid to fail. Just do it and don\’t let anybody tell you can\’t.</item>

        <item>Half the stuff you\'re stressing over isn\'t even worth it.</item>

        <item>I work really hard at trying to see the big picture and not getting stuck in ego. I believe we\’re all put on this planet for a purpose, and we all have a different purpose. When you connect with that love and that compassion, that\’s when everything unfolds.</item>

        <item>On my own I will just create, and if it works, it works, and if it doesn\’t, I\’ll create something else. I don\’t have any limitations on what I think I could do or be.</item>

        <item>If you want to be a successful in this world, you have to follow your passion, not a paycheck.</item>

        <item>Nothing hurts more than being disappointed by the only person you thought would never hurt you.</item>

        <item>Sometimes black clouds make that blue sky more beautiful.</item>

        <item>You can\’t go back and make a new start, but you can start right now and make a brand new ending.</item>

        <item>Actually spending ten minutes clearing off one shelf is better than fantasizing about spending a weekend cleaning out the basement.</item>

        <item>Learn from yesterday, live for today, hope for tomorrow. The important thing is not to stop questioning.</item>

        <item>When everything seems to be going against you, remember that the aeroplane takes off against the wind, not with it.</item>

        <item>You can\’t stop the waves, but you can learn to surf.</item>

        <item>When you walk through a storm hold your head up high, and don\’t be afraid of the dark,At the end of the storm is a golden sky, and the sweet silver song of a lark.</item>

        <item>Rule number one\: Don\’t sweat the small stuff. Rule number two\: It\’s all small stuff.</item>

        <item>You don\’t have to control your thoughts, you just have to stop letting them control you.</item>

        <item>Your mind will answer most questions if you learn to relax and wait for the answer.</item>

    </string-array>
</resources>