<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pranjal.myapplicatio.MainActivity">

    <item
        android:id="@+id/action_share_app"
        android:orderInCategory="100"
        android:title="@string/share_app"
        app:showAsAction="never"/>


    <item
        android:id="@+id/action_download"
        android:orderInCategory="100"
        android:title="@string/action_download"
        app:showAsAction="never" />

    <item
        android:id= "@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_copy"
        android:orderInCategory="100"
        android:title="@string/action_copy"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rate"
        android:orderInCategory="100"
        android:title="@string/action_rate"
        app:showAsAction="never" />


</menu>